--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -21,21 +21,21 @@
             >
 
             <android.support.v7.widget.CardView
+                android:id="@+id/card_view"
                 android:layout_width="120dp"
+                android:layout_height="80dp"
                 android:layout_margin="2dp"
                 android:foreground="?android:attr/selectableItemBackground"
                 card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="3dp"
-                android:layout_height="90dp"
-                android:id="@+id/card_view">
+                card_view:cardElevation="3dp">
 
                 <ImageView
-                    app:srcCompat="?attr/selectableItemBackground"
-                    android:layout_centerVertical="true"
-                    android:layout_alignStart="@+id/card_view_all_news"
                     android:id="@+id/image_all_news"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/card_view_all_news"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="?attr/selectableItemBackground" />
 
             </android.support.v7.widget.CardView>
 
