--- a/app/src/main/res/layout/activity_article_news.xml
+++ b/app/src/main/res/layout/activity_article_news.xml
@@ -40,7 +40,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
         android:id="@+id/neestedscroll"
         android:layout_marginStart="13dp"
